--- a/src/index.css
+++ b/src/index.css
@@ -14,10 +14,14 @@
   --font-weight-semi-bold: 600;
 }
 
+
+
+
 body {
   font-family: var(--font-family);
   font-weight: var(--font-weight-regular);
   font-size: 16px;
+
 }
 
 /* Typography */
@@ -33,6 +37,12 @@ h2 {
   font-weight: var(--font-weight-semi-bold);
   font-size: 30px;
   color: var(--grey-dark);
+}
+
+.genre-card-container{
+  max-width: 700px;
+  margin: 0 auto;
+
 }
 
 .genre-card {
@@ -53,9 +63,9 @@ h2 {
 }
 
 .genre-icon {
-  margin-right: 15px; /* Adjust the margin as needed */
-  width: 30px; /* Set a fixed width for the icon */
-  height: 30px; /* Set a fixed height for the icon */
+  margin-right: 15px; 
+  width: 30px; 
+  height: 30px; 
   display: flex;
   align-items: center;
   justify-content: center;
@@ -64,18 +74,18 @@ h2 {
 .genre-icon img {
   max-width: 100%;
   max-height: 100%;
-  object-fit: contain; /* Ensures the image fits within the div */
+  object-fit: contain; 
 }
 
 .genre-title {
   font-family: "Montserrat", sans-serif;
-  font-weight: 600; /* Semi Bold */
-  color: #333333; /* Dark Grey for text */
+  font-weight: 600; 
+  color: #333333; 
 }
 
 .genre-arrow {
-  color: #5e56e7; /* Primary color */
-  font-size: 1.5rem; /* Adjust the size as needed */
+  color: #5e56e7; 
+  font-size: 1.5rem; 
 }
 
 
@@ -98,31 +108,133 @@ h2 {
 }
 
 
-
 .rectangle {
   width: 114px;
   height: 162px;
   box-shadow: 0 2px 5px 0 rgba(211, 209, 238, 0.5);
   padding: 0;
-  margin: 0;
- 
+  margin: 0 auto; /* Center the content horizontally if needed */
 }
 
 .book-cover {
   width: 100%;
-  height: 162px; /* Set a fixed height */
+  height: 162px;
   border-radius: 8px !important;
   overflow: hidden;
-  object-fit: cover; /* Cover the container */
+  object-fit: cover;
 }
 
 .book-title {
-  font-size: 12px; /* Adjust font size as needed */
+  font-size: 12px;
   color: black;
 }
 
 .book-author {
-  font-size: 12px; /* Adjust font size as needed */
-
+  font-size: 12px;
 }
 
+.has-search {
+  position: relative;
+}
+
+.has-search .form-control {
+  padding-left: 50px;
+  padding-right: 10px;
+  border-radius: 4px;
+  height: 40px;
+  background-color: #F0F0F6;
+}
+
+.has-search .form-control:focus {
+  border-color: var(--primary-color);
+  outline: none !important;
+  box-shadow: none;
+}
+
+.has-search .form-control-feedback {
+  position: absolute;
+  z-index: 2;
+  display: block;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  pointer-events: none;
+  color: #aaa;
+  left: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.has-search .form-control::placeholder {
+  color: #aaa;
+  opacity: 1;
+}
+
+.has-search .form-control::-moz-clear {
+  color: #aaa;
+}
+
+.listing-title{
+  color:var(--primary-color);
+}
+
+.listing-img{
+  margin-right: 10px;
+  margin-bottom: 4px;
+}
+
+.bg-card{
+
+  width: 100%;
+}
+
+.bg-full-width {
+  position: relative; 
+  width: 100vw; 
+  left: 50%; 
+  margin-left: -50vw; 
+  background-color: var(--secondary-color);
+  padding: 20px 0;  
+}
+
+.book-grid {
+  margin: 0 auto;
+}
+.header{
+  color: var(--primary-color);
+}
+
+.container-bg{
+  background-color: var(--secondary-color);
+  margin-top: 0; 
+  padding-top: 0; 
+}
+
+.background-container {
+  padding: 0;
+  margin: 0;
+  background-image: url('./images/Pattern.svg');
+  background-repeat: repeat;
+  background-size: cover;
+  background-position: center;
+  min-height: 140px; 
+  width: 99vw;
+  margin-left: calc(-50vw + 50%);
+  padding-left:27%;
+}
+
+
+.text-content {
+  text-align: start;
+  max-width: 800px;
+}
+
+.header {
+  font-size: 48px; 
+}
+
+.lead {
+  font-size: 16px; 
+  color: #000; 
+}
